4.dec (ws)
      - pick right sharp and flat symbols when reading instrument templates
      - fix deleting notes in tuplet
      - fix tremolo through stem
      - fix midi import; sometimes an extra empty staff was created
      - fix crash in drum staff note entry mode
3.dec (ws)
      - new functions: move palettes up/down; insert new palette
      - new palette properties dialog
      - disable script interface for mac os x build
      - use sys/time.h for mac os x
      - removed "#include <QtGui/QX11Info>" from all.h
      - replaced values.h with limits.h in all.h
2.dec (ws)
      - implement print page range (print from-to)
      - palette elements are now movable via drag/drop; palettes ares saved/restored
        in special xml file at ~/.local/share/data/MusE/MuseScore/mscore-palette.xml (linux)
      - fix update of dot button in note entry toolbar
      (db)
      - Added short names for vocal parts in instrument lists
      - Minor UI text improvements / copy edits (English)
1.dec  (ws)
      - dont change cursor position, when entering chord note in note entry mode
      - implement copy/paste of tempo text
      - copy/paste grace notes in range selection
      - fix transpose of harmony elements (chord names)
      - restrict note time positions while inputting notes with mouse
      - fix behaviour of tie button
30.nov (ws)
      - allow beams over clefs
      - fix: could not beam duole
      - font fixes
29.nov (ws)
      - refine the rule when two notes share the same note head (test3.msc)
      - fix another copy/paste crash (src is a range and destination a single note/rest)
      - no whole measure rest in 4/2 and 8/2
      - fix longa
      - fix note head layout in multi voice context
      - fix small rests
28.nov (ws)
      - cleanup for dynamics; remove DYNAMIC1 text style
      - fix: dynamic "p" not editable
      - fix: in relayout() measure bounding box height was set to zero; measure
        could not be selected any more