@@ -110,8 +110,6 @@ FIND_PATH(QT_QTSCRIPT_INCLUDE_DIR QtScript
 FIND_LIBRARY(QT_QTSCRIPT_LIBRARY_RELEASE NAMES QtScript QtScript4 PATHS ${QT_LIBRARY_DIR}        NO_DEFAULT_PATH)
 FIND_LIBRARY(QT_QTSCRIPT_LIBRARY_DEBUG   NAMES QtScript QtScript_debug QtScriptd4 PATHS ${QT_LIBRARY_DIR} NO_DEFAULT_PATH)
 
-message("QT_LIBRARIES  ${QT_LIBRARIES}")
-
 _QT4_ADJUST_LIB_VARS(QTSCRIPT)
 
 #for cmake 2.4
@@ -153,11 +151,11 @@ endif (APPLE OR MINGW)
 ## find jack >= 0.98.0
 ##
 
-if (MINGW)
+if (APPLE OR MINGW)
       set (USE_JACK 0)
-else (MINGW)
+else (APPLE OR MINGW)
       PKGCONFIG (jack 0.98.0 JACK_INCDIR JACK_LIBDIR JACK_LIB JACK_CPP )
-endif (MINGW)
+endif (APPLE OR MINGW)
 
 if (JACK_INCDIR)
 	message("Jack detected")
